ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_binop_offset_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (9) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (10) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (11) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (12) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (13) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 4) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {BinOp(2, 0, 1)};
\node[font=\tiny] at (-1.5, 3.5) {BinOp(2, 1, 0)};
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (1) edge (12);
		\path[->] (2) edge (3);
		\path[->] (2) edge (13);
		\path[->] (4) edge (5);
		\path[->] (6) edge (7);
		\path[->] (6) edge (12);
		\path[->] (7) edge (8);
		\path[->] (7) edge (13);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (14) edge (0);
		\path[->] (14) edge (15);
		\path[->] (15) edge (6);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (18);


                \end{tikzpicture}
            \end{document}
