ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_chain_assign_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (2) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (3) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (7) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (8) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (12) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (13) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (18) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (21) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (22) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (23) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (26) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (27) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (28) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (30) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (31) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (32) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (33) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (34) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (35) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (36) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (37) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (38) at (1, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 2.5) {Assign(2, 0)};
\node[font=\tiny] (note_2) at (-1.5, 3.5) {Assign(3, 2)};
\node[font=\tiny] (note_3) at (-1.5, 1.5) {Const(1, 1.0)};
		\path[->] (0) edge (5);
		\path[->] (1) edge (20);
		\path[->] (2) edge (7);
		\path[->] (3) edge (8);
		\path[->] (0) edge (6);
		\path[->] (5) edge (10);
		\path[->] (6) edge (11);
		\path[->] (7) edge (26);
		\path[->] (8) edge (13);
		\path[->] (5) edge (12);
		\path[->] (10) edge (15);
		\path[->] (11) edge (16);
		\path[->] (12) edge (17);
		\path[->] (13) edge (32);
		\path[->] (11) edge (18);
		\path[->] (15) edge (34);
		\path[->] (16) edge (35);
		\path[->] (17) edge (36);
		\path[->] (18) edge (37);
		\path[->] (18) edge (38);


                \end{tikzpicture}
            \end{document}
