ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_double_assign_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (2) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (6) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (17) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (21) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (22) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (25) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (26) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (28) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (29) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (30) at (1, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(2, 0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(2, 1)};
		\path[->] (0) edge (4);
		\path[->] (1) edge (16);
		\path[->] (2) edge (6);
		\path[->] (0) edge (5);
		\path[->] (4) edge (8);
		\path[->] (5) edge (9);
		\path[->] (6) edge (21);
		\path[->] (4) edge (10);
		\path[->] (8) edge (12);
		\path[->] (9) edge (13);
		\path[->] (10) edge (14);
		\path[->] (9) edge (26);
		\path[->] (12) edge (27);
		\path[->] (13) edge (28);
		\path[->] (14) edge (29);
		\path[->] (14) edge (30);


                \end{tikzpicture}
            \end{document}
