ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_double_const_with_params_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (2) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (13) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (18) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (21) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (22) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(2, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(2, 1)};
		\path[->] (0) edge (4);
		\path[->] (1) edge (5);
		\path[->] (2) edge (13);
		\path[->] (0) edge (6);
		\path[->] (4) edge (8);
		\path[->] (5) edge (9);
		\path[->] (6) edge (10);
		\path[->] (5) edge (18);
		\path[->] (8) edge (19);
		\path[->] (9) edge (20);
		\path[->] (10) edge (21);
		\path[->] (10) edge (22);


                \end{tikzpicture}
            \end{document}
