ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_functions_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Call(mytest, [0], [])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (3, 3) { };
\node[font=\tiny] at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] at (1.5, 2.5) {Return([])};
		\path[->] (1) edge (2);
		\path[->] (12) edge (13);
		\path[->] (2) edge (3);
		\path[->] (4) edge (5);
		\path[->] (6) edge (7);
		\path[->] (8) edge (1);
		\path[->] (8) edge (9);
		\path[->] (14) edge (12);
		\path[->] (14) edge (15);
		\path[->] (9) edge (6);
		\path[->] (9) edge (10);
		\path[->] (15) edge (16);
		\path[->] (10) edge (11);
		\path[->, green] (12) [bend left] edge node { } (0);
		\path[->, green] (15) [bend left] edge node { } (8);
		\path[->, red] (10) [bend right] edge  node { } (16);


                \end{tikzpicture}
            \end{document}
