ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_global_call_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (25) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (26) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (27) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (28) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (29) at (5, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (30) at (5, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (31) at (5, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (32) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (33) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (34) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (35) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (36) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (37) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (38) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (39) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (40) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (41) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (42) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (43) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (44) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (45) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (46) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (47) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (48) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (49) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (50) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (51) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (52) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (53) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (54) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (55) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (56) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (57) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (58) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (59) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (60) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (61) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (62) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (63) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (64) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (65) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (66) at (0, 6) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(1)};
\node[font=\tiny] at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(0, [1], [])};
\node[font=\tiny] at (-1.5, 3.5) {Assign(2, 0)};
\node[font=\tiny] at (-1.5, 4.5) {Assign(-2, 2)};
\node[font=\tiny] at (-1.5, 5.5) {Return([])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (2) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (3) at (11, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (4) at (11, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (5) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (6) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (7) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (8) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (9) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (19) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (7, 4) { };
\node[font=\tiny] at (5.5, 0.5) {Block(0)};
\node[font=\tiny] at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] at (5.5, 3.5) {Return([])};
		\path[->] (0) edge (1);
		\path[->] (25) edge (26);
		\path[->] (1) edge (2);
		\path[->] (26) edge (27);
		\path[->] (3) edge (4);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (30) edge (31);
		\path[->] (5) edge (6);
		\path[->] (32) edge (33);
		\path[->] (6) edge (7);
		\path[->] (33) edge (34);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (35) edge (36);
		\path[->] (37) edge (38);
		\path[->] (10) edge (11);
		\path[->] (39) edge (40);
		\path[->] (11) edge (12);
		\path[->] (11) edge (17);
		\path[->] (40) edge (41);
		\path[->] (12) edge (13);
		\path[->] (41) edge (42);
		\path[->] (13) edge (14);
		\path[->] (42) edge (43);
		\path[->] (42) edge (57);
		\path[->] (43) edge (44);
		\path[->] (44) edge (45);
		\path[->] (15) edge (16);
		\path[->] (46) edge (47);
		\path[->] (17) edge (3);
		\path[->] (17) edge (18);
		\path[->] (48) edge (49);
		\path[->] (18) edge (19);
		\path[->] (49) edge (50);
		\path[->] (50) edge (51);
		\path[->] (51) edge (52);
		\path[->] (53) edge (54);
		\path[->] (54) edge (55);
		\path[->] (55) edge (56);
		\path[->] (57) edge (37);
		\path[->] (57) edge (58);
		\path[->] (58) edge (59);
		\path[->] (20) edge (21);
		\path[->] (60) edge (61);
		\path[->] (21) edge (22);
		\path[->] (61) edge (48);
		\path[->] (61) edge (62);
		\path[->] (22) edge (23);
		\path[->] (62) edge (63);
		\path[->] (23) edge (24);
		\path[->] (63) edge (64);
		\path[->] (64) edge (65);
		\path[->] (65) edge (66);
		\path[->, green] (27) [bend left] edge node { } (0);
		\path[->, green] (34) [bend left] edge node { } (5);
		\path[->, green] (48) [bend left] edge node { } (5);
		\path[->, green] (62) [bend left] edge node { } (20);
		\path[->, red] (3) [bend right] edge  node { } (28);
		\path[->, red] (8) [bend right] edge  node { } (35);
		\path[->, red] (23) [bend right] edge  node { } (63);


                \end{tikzpicture}
            \end{document}
